--- a/app/templates/location/_visits.html
+++ b/app/templates/location/_visits.html
@@ -33,7 +33,7 @@
                 {% for image in visit.photos %}
                 <div class="col-sm-3">
                     <div class="position-relative control-hover">
-                        {{ link_button('', Url.for_return('location.photo_remove', photo_id=image.id), 'trash', 'danger', class='btn-sm position-absolute top-0 end-0 control-hide') }}
+                        {{ link_button('', Url.for_return('upload.remove', upload_id=image.id), 'trash', 'danger', class='btn-sm position-absolute top-0 end-0 control-hide') }}
                         <a href="{{ Url.get('upload.get', path=image.path) }}"
                             data-toggle="lightbox" data-gallery="{{ visit.id }}">
                             <img src="{{ Url.get('upload.get', path=image.thumbnail) }}" class="img-fluid">
