--- a/app/templates/upload/_gallery.html
+++ b/app/templates/upload/_gallery.html
@@ -1,18 +1,18 @@
 {% from '_helpers.html' import link_button %}
 
-{% if location.has_photos() %}
+{% if object.has_photos() %}
 <div class="card content-card">
     <div class="card-header">
         {{ _('Gallery') }}
     </div>
     <div class="card-body row">
-        {% for image in location.uploads %}
-            {% if image.type.name in ('PHOTO', 'HISTORICAL_PHOTO') and not image == location.photo %}
+        {% for image in object.uploads %}
+            {% if image.type.name in ('PHOTO', 'HISTORICAL_PHOTO') and not image == object.photo %}
             <div class="col-sm-6 col-xl-4">
                 <div class="position-relative control-hover mb-2">
                     <div class="control-hide">
-                        {{ link_button('', Url.for_return('location.photo_edit', photo_id=image.id), 'pencil', 'warning', class='btn-sm position-absolute top-0 start-0') }}
-                        {{ link_button('', Url.for_return('location.photo_remove', photo_id=image.id), 'trash', 'danger', class='btn-sm position-absolute top-0 end-0') }}
+                        {{ link_button('', Url.for_return('upload.photo_edit', photo_id=image.id), 'pencil', 'warning', class='btn-sm position-absolute top-0 start-0') }}
+                        {{ link_button('', Url.for_return('upload.remove', upload_id=image.id), 'trash', 'danger', class='btn-sm position-absolute top-0 end-0') }}
                     </div>
 
                     <a href="{{ Url.get('upload.get', path=image.path) }}"
