--- a/app/templates/upload/photo.html
+++ b/app/templates/upload/photo.html
@@ -1,14 +1,13 @@
 {% if location %}
-    {% set title=_('Add document for %(name)s', name=location.name) %}
+    {% set title=_('Add a new photo') %}
 {% else %}
-    {% set title=_('Edit document') %}
+    {% set title=_('Edit photo') %}
 {% endif %}
 
 {% extends "_private.html" %}
 {% from '_helpers.html' import render_field, link_button %}
 
 {% block content %}
-
 <div class="card">
     <h4 class="card-header">
         {{ title }}
@@ -17,10 +16,12 @@
         <form method="POST" action="" role="form" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
 
-            {{ render_field(form.name, 'pencil', placeholder=_('Document name')) }}
-            {{ render_field(form.description, 'card-text', placeholder=_('Short description of the document')) }}
-            {{ render_field(form.type, 'list-nested', field_class="dselect", required=False) }}
-            {{ render_field(form.file, 'file-earmark-text') }}
+            {{ render_field(form.name, 'pencil', placeholder=_('Photo name')) }}
+            {{ render_field(form.description, 'card-text', placeholder=_('Short description of the photo')) }}
+            {{ render_field(form.taken_on, 'calendar-date') }}
+            {% if form.file %}
+                {{ render_field(form.file, 'image') }}
+            {% endif %}
 
             <div class='text-end mt-2'>
                 {{ link_button(_('Cancel'), Url.get_return(), None, 'danger') }}
