--- a/app/templates/upload/document.html
+++ b/app/templates/upload/document.html
@@ -1,13 +1,14 @@
 {% if location %}
-    {% set title=_('Add photo for %(name)s', name=location.name) %}
+    {% set title=_('Add a new document') %}
 {% else %}
-    {% set title=_('Edit photo') %}
+    {% set title=_('Edit document') %}
 {% endif %}
 
 {% extends "_private.html" %}
 {% from '_helpers.html' import render_field, link_button %}
 
 {% block content %}
+
 <div class="card">
     <h4 class="card-header">
         {{ title }}
@@ -16,12 +17,10 @@
         <form method="POST" action="" role="form" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
 
-            {{ render_field(form.name, 'pencil', placeholder=_('Photo name')) }}
-            {{ render_field(form.description, 'card-text', placeholder=_('Short description of the photo')) }}
-            {{ render_field(form.taken_on, 'calendar-date') }}
-            {% if location %}
-            {{ render_field(form.file, 'image') }}
-            {% endif %}
+            {{ render_field(form.name, 'pencil', placeholder=_('Document name')) }}
+            {{ render_field(form.description, 'card-text', placeholder=_('Short description of the document')) }}
+            {{ render_field(form.type, 'list-nested', field_class="dselect", required=False) }}
+            {{ render_field(form.file, 'file-earmark-text') }}
 
             <div class='text-end mt-2'>
                 {{ link_button(_('Cancel'), Url.get_return(), None, 'danger') }}
