--- a/app/templates/_private.html
+++ b/app/templates/_private.html
@@ -58,10 +58,10 @@
     </div>
 </nav>
 
-<div class="row m-0 p-0">
-    <div class="col-sm-12 col-md-2 p-0">
+<div class="row m-0 p-0 flex-grow-1">
+    <nav class="scrollable-content collapse d-md-block bg-light p-2 col-md-2" id="collapsibleMenu">
         {% include '_menu.html' %}
-    </div>
+    </nav>
     <div class="col-sm-12 col-md-10 p-3">
         {% block content %}
         {% endblock %}
