--- a/app/templates/location/location.html
+++ b/app/templates/location/location.html
@@ -1,6 +1,20 @@
 {% set title=location.name %}
 {% extends "_private.html" %}
-{% from '_helpers.html' import link_button, render_field %}
+{% from '_helpers.html' import link_button, render_field, map_modal %}
+
+{% set js_scripts = [
+    'leaflet/leaflet.js',
+    'leaflet/plugins/markercluster/leaflet.markercluster.js',
+    'js/map.js',
+    ]
+%}
+
+{% set stylesheets = [
+    'leaflet/leaflet.css',
+    'leaflet/plugins/markercluster/MarkerCluster.css',
+    'leaflet/plugins/markercluster/MarkerCluster.Default.css',
+    ]
+%}
 
 {% block content %}
 <div class="row justify-content-between">
@@ -22,7 +36,7 @@
         <h3>{{ location.underground.type or location.urbex.type }}, {{ location.underground.accessibility or location.urbex.accessibility }}</h3>
         <small clas="text-muted">
             <i class="bi bi-geo-alt"></i>
-            <a href="https://mapy.cz/zakladni?&q={{ location.latitude }}%2C%20{{ location.longitude }}" target="_blank">{{ location.latitude }} {{ location.longitude }}</a>
+            <a href="javascript:showMap({{ location.latitude.value }}, {{ location.longitude.value }})">{{ location.latitude }} {{ location.longitude }}</a>
         </small>
     </div>
     <div class="col-auto">
@@ -162,7 +176,7 @@
                     {{ link_button('', Url.for_return('location.poi_remove', poi_id=poi.id), 'trash', 'danger', class='btn-sm position-absolute top-0 end-0 foreground-item control-hide') }}
                     <strong>{{ poi.name }}</strong>
                     <p class="mb-0 text-muted">{{ poi.description }}</p>
-                    <a href="https://mapy.cz/zakladni?&q={{ poi.latitude }}%2C%20{{ poi.longitude }}" class="stretched-link" target="_blank"></a>
+                    <a href="javascript:showMap({{ poi.latitude.value }}, {{ poi.longitude.value }}, '{{ poi.name }}')" class="stretched-link"></a>
                 </div>
                 {% endfor %}
             </div>
@@ -177,6 +191,23 @@
     </div>
 </div>
 
+{{ map_modal(title) }}
+{% endblock %}
 
+{% block scripts %}
+<script>
+    const mapModal = new bootstrap.Modal(document.getElementById('mapModal'))
+    var mymap = new MyMap('map')
 
+    document.getElementById('mapModal').addEventListener(
+        'shown.bs.modal', () => mymap.redraw())
+
+    function showMap(latitude, longitude, name="") {
+        let pos = L.latLng(latitude, longitude)
+        mymap.clearMarkers()
+        mymap.addMarker(pos, name)
+        mymap.zoomPosition(pos)
+        mapModal.show()
+    }
+</script>
 {% endblock %}
