--- a/app/templates/location/map.html
+++ b/app/templates/location/map.html
@@ -18,7 +18,11 @@
 
 {% block content %}
 <div id="map" class="h-100" style="min-height: 300px"></div>
+{% endblock %}
+
+{% block scripts %}
 <script>
-    var map_api_url = "{{ Url.get('location.api', type_str=loc_type) }}"
+    var mymap = new MyMap('map')
+    mymap.fetchLocations("{{ Url.get('location.api', type_str=loc_type) }}")
 </script>
 {% endblock %}
