--- a/app/templates/location/poi.html
+++ b/app/templates/location/poi.html
@@ -1,7 +1,21 @@
 {% set title=_('Add POI for %(name)s', name=location.name) %}
 
 {% extends "_private.html" %}
-{% from '_helpers.html' import render_field, link_button %}
+{% from '_helpers.html' import render_field, link_button, map_modal %}
+
+{% set js_scripts = [
+    'leaflet/leaflet.js',
+    'leaflet/plugins/markercluster/leaflet.markercluster.js',
+    'js/map.js',
+    ]
+%}
+
+{% set stylesheets = [
+    'leaflet/leaflet.css',
+    'leaflet/plugins/markercluster/MarkerCluster.css',
+    'leaflet/plugins/markercluster/MarkerCluster.Default.css',
+    ]
+%}
 
 {% block content %}
 
@@ -18,6 +32,11 @@
             {{ render_field(form.latitude, 'geo-alt', placeholder=_('50.1234N')) }}
             {{ render_field(form.longitude, 'geo-alt', placeholder=_('14.4567E')) }}
 
+            <div class="text-center mt-2 id">
+                {{ link_button(_('Current location'), 'javascript:getLocation()', None, 'secondary btn-sm')}}
+                {{ link_button(_('Select from map'), 'javascript:mapSelect()', None, 'secondary btn-sm')}}
+            </div>
+
             <div class='text-end mt-2'>
                 {{ link_button(_('Cancel'), Url.get_return(), None, 'danger') }}
                 {{ form.submit(class="btn btn-success") }}
@@ -25,4 +44,10 @@
         </form>
     </div>
 </div>
+
+{{ map_modal(_("Select from map"), style="cursor: crosshair")}}
+{% endblock %}
+
+{% block scripts %}
+{% include 'location/_from_map.html' %}
 {% endblock %}
