--- a/app/templates/location/poi.html
+++ b/app/templates/location/poi.html
@@ -1,24 +1,10 @@
 {% set title=_('Add POI for %(name)s', name=location.name) %}
+{% set include_map=true %}
 
 {% extends "_private.html" %}
 {% from '_helpers.html' import render_field, link_button, map_modal %}
 
-{% set js_scripts = [
-    'leaflet/leaflet.js',
-    'leaflet/plugins/markercluster/leaflet.markercluster.js',
-    'js/map.js',
-    ]
-%}
-
-{% set stylesheets = [
-    'leaflet/leaflet.css',
-    'leaflet/plugins/markercluster/MarkerCluster.css',
-    'leaflet/plugins/markercluster/MarkerCluster.Default.css',
-    ]
-%}
-
 {% block content %}
-
 <div class="card">
     <h4 class="card-header">
         {{ title }}
