--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -23,6 +23,12 @@
     <link rel="stylesheet" href="{{ Url.get('static', filename='bootstrap/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ Url.get('static', filename='dselect/dselect.min.css') }}">
     <link rel="stylesheet" href="{{ Url.get('static', filename='bootstrap/icons/bootstrap-icons.css') }}">
+    {% if include_map %}
+        <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/leaflet.css') }}">
+        <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/plugins/markercluster/MarkerCluster.css') }}">
+        <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/plugins/markercluster/MarkerCluster.Default.css') }}">
+        <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/plugins/locatecontrole/L.Control.Locate.min.css') }}">
+    {% endif %}
     {% for stylesheet in stylesheets %}
         <link rel="stylesheet" href="{{ Url.get('static', filename=stylesheet) }}">
     {% endfor %}
@@ -56,6 +62,12 @@
     <script src="{{ Url.get('static', filename='js/bs5-lightbox.min.js') }}"></script>
     {{ moment.include_moment() }}
     {{ moment.lang(g.locale) }}
+    {% if include_map %}
+        <script src="{{ Url.get('static', filename='leaflet/leaflet.js') }}"></script>
+        <script src="{{ Url.get('static', filename='leaflet/plugins/markercluster/leaflet.markercluster.js') }}"></script>
+        <script src="{{ Url.get('static', filename='leaflet/plugins/locatecontrol/L.Control.Locate.min.js') }}"></script>
+        <script src="{{ Url.get('static', filename='js/map.js') }}"></script>
+    {% endif %}
     {% for script in js_scripts %}
         <script src="{{ Url.get('static', filename=script) }}"></script>
     {% endfor %}
