--- a/app/templates/location/map.html
+++ b/app/templates/location/map.html
@@ -1,18 +1,5 @@
 {% set title=_('Map') %}
-
-{% set js_scripts = [
-    'leaflet/leaflet.js',
-    'leaflet/plugins/markercluster/leaflet.markercluster.js',
-    'js/map.js',
-    ]
-%}
-
-{% set stylesheets = [
-    'leaflet/leaflet.css',
-    'leaflet/plugins/markercluster/MarkerCluster.css',
-    'leaflet/plugins/markercluster/MarkerCluster.Default.css',
-    ]
-%}
+{% set include_map=true %}
 
 {% extends "_private.html" %}
 
