Added aircraft, relief and historic layers to maps

--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -66,6 +66,8 @@
         <script src="{{ Url.get('static', filename='leaflet/leaflet.js') }}"></script>
         <script src="{{ Url.get('static', filename='leaflet/plugins/markercluster/leaflet.markercluster.js') }}"></script>
         <script src="{{ Url.get('static', filename='leaflet/plugins/locatecontrol/L.Control.Locate.min.js') }}"></script>
+        <script src="{{ Url.get('static', filename='leaflet/plugins/esri/esri-leaflet.js') }}"></script>
+        <script src="{{ Url.get('static', filename='leaflet/plugins/esri/esri-leaflet-vector.js') }}"></script>
         <script src="{{ Url.get('static', filename='js/map.js') }}"></script>
     {% endif %}
     {% for script in js_scripts %}
