--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -27,8 +27,10 @@
         <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/leaflet.css') }}">
         <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/plugins/markercluster/MarkerCluster.css') }}">
         <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/plugins/markercluster/MarkerCluster.Default.css') }}">
-        <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/plugins/locatecontrole/L.Control.Locate.min.css') }}">
+        <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/plugins/locatecontrol/L.Control.Locate.min.css') }}">
         <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/plugins/ruler/leaflet-ruler.css') }}">
+        <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/plugins/easy_button/easy-button.css') }}">
+        <link rel="stylesheet" href="{{ Url.get('static', filename='leaflet/plugins/tag_filter/leaflet-tag-filter-button.css') }}">
     {% endif %}
     {% for stylesheet in stylesheets %}
         <link rel="stylesheet" href="{{ Url.get('static', filename=stylesheet) }}">
@@ -75,6 +77,9 @@
         <script src="{{ Url.get('static', filename='leaflet/plugins/esri/esri-leaflet.js') }}"></script>
         <script src="{{ Url.get('static', filename='leaflet/plugins/esri/esri-leaflet-vector.js') }}"></script>
         <script src="{{ Url.get('static', filename='leaflet/plugins/ruler/leaflet-ruler.js') }}"></script>
+        <script src="{{ Url.get('static', filename='leaflet/plugins/easy_button/easy-button.js') }}"></script>
+        <script src="{{ Url.get('static', filename='leaflet/plugins/tag_filter/leaflet-tag-filter-button.js') }}"></script>
+        <script src="{{ Url.get('static', filename='js/tag_filter_fix.js') }}"></script>
         <script src="{{ Url.get('static', filename='js/map.js') }}"></script>
     {% endif %}
     {% for script in js_scripts %}
