--- a/app/templates/location/_metadata.html
+++ b/app/templates/location/_metadata.html
@@ -13,10 +13,10 @@
         {{ _('Created') }}: {{ location.created.date() }}<br>
         {{ _('Last updated') }}: {{ location.modified.date() }}<br>
         {{ _('Maintainer') }}: <a href="{{ Url.get('user.profile', user_id=location.owner_id) }}">{{ location.owner }}</a><br>
-        <hr>
-        {{ _('State') }}: {{ location.underground.state or location.urbex.state }}</br>
 
         {% if location.underground %}
+            <hr>
+            {{ _('State') }}: {{ location.underground.state }}<br>
             {{ _('Length') }}: {{ _('Unknown') if location.underground.length == None else location.underground.length }} m <br>
             {% if location.underground.tools %}
             {{ _('Tools required') }}: {{ location.underground.tools }} <br>
@@ -30,7 +30,9 @@
                 {% endfor %}
                 <br>
             {% endif %}
-        {% else %}
+        {% elif location.urbex %}
+            <hr>
+            {{ _('State') }}: {{ location.urbex.state }}<br>
             {{ _('Abandoned') }}: {{ _('Unknown') if location.urbex.abandoned_year == None else location.urbex.abandoned_year }} <br>
         {% endif %}
     </div>
