Added global message support for admins

--- a/app/templates/_menu.html
+++ b/app/templates/_menu.html
@@ -56,6 +56,7 @@
         menu_item(_("Invitations"), "people-fill", Url.get('admin.invitations')),
         menu_item(_("Logins"), "door-open", Url.get('admin.logins')),
         menu_item(_("Events"), "list", Url.get('admin.events')),
+        menu_item(_("Global message"), "envelope", Url.get('admin.message')),
         ], show=('admin' in request.url))
     }}
 
